Fix scrolling behaviours on smaller devices (#1040)
* * compartmentalise scss

* * shift sidebar resposive behaviour to layout
* shift nav-item widths to sidebar
* move sidebar width to vars

* * remove flex-container wrappers

* * fix scroll behaviour on small devices

* * fix layout after botched merge

--- a/app/assets/stylesheets/_notifications.scss
+++ b/app/assets/stylesheets/_notifications.scss
@@ -132,7 +132,6 @@ $notification-items: (
       border-top: 1px solid $list-group-border-color;
       position: relative;
       padding: 10px 0px;
-      min-height: 110px;
       &:first-child {
         border-top: none;
       }
